# libics

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.am  Makefile.bcc  Makefile.in  Makefile.vc6  Makefile.vc9  README  TODO  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  configure.in  libics.def  libics.h  libics_binary.c  libics_compress.c  libics_conf.h  libics_conf.h.in  libics_conf_with_zlib.h.in  libics_data.c  libics_gzip.c  libics_history.c  libics_intern.h  libics_ll.h  libics_preview.c  libics_random_access.c  libics_random_access.h  libics_read.c  libics_sensor.c  libics_sensor.h  libics_test.c  libics_test.h  libics_top.c  libics_util.c  (+23 more)
Documentation/: Credits.html  Documentation.html  Enums.html  Ics_DataRepresentation.html  Ics_Error.html  Ics_Header.html  Ics_ImelRepresentation.html  LowLevelFunctions.html  TopLevelFunctions.html  Usage.html  index.html  libics.css
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
docs/: Credits.html  Documentation.html  Enums.html  Ics_DataRepresentation.html  Ics_Error.html  Ics_Header.html  Ics_ImelRepresentation.html  Links.html  LowLevelFunctions.html  TopLevelFunctions.html  Usage.html  index.html
support/cpp_interface/: libics.cpp  libics.hpp
support/icsviewer/: README  icsviewer.dsp  icsviewer.dsw  readics.c  resource.h  viewer.c  viewer.rc  writedib.c
support/matlab/: README  icsread.c  icswrite.c  makefile
